[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "civetqc"
version = "0.1.6"
authors = [
  { name="Joshua Unrau", email="contact@joshuaunrau.com" },
]
description = "CivetQC is a command-line tool for automated quality control of CIVET outputs"
readme = "README.md"
keywords = ["CIVET", "QC"]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn == 1.1.1",
    "numpy == 1.23.2",
    "imbalanced-learn == 0.9.1"
]

[project.optional-dependencies]
development = [
  "black >= 22.6.0",
  "build >= 0.9.0",
  "matplotlib >= 3.5.3",
  "mypy >= 0.971",
  "pandas >= 1.4.3",
  "scipy >= 1.9.0",
  "twine >= 4.0.1",
  "types-pkg-resources >= 0.1.3",
  "types-setuptools >= 61.0",
  "yellowbrick >= 1.5"
]

[project.urls]
"Homepage" = "https://github.com/joshunrau/civetqc"
"Bug Tracker" = "https://github.com/joshunrau/civetqc/issues"

[project.scripts]
civetqc = "civetqc.main:main"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"

[tool.setuptools.package-data]
"civetqc.resources" = ["*.pkl"]

[tool.setuptools.packages.find]
include = ["civetqc", "civetqc.resources"]