[metadata]
name = civetqc
version = 0.0.1
author = Joshua Unrau
author_email = joshua.unrau@mail.mcgill.ca
description = Semi-Automated CIVET Quality Control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshunrau/civetqc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True