[metadata]
name = civetqc
version = 0.0.2
author = Joshua Unrau
author_email = joshua.unrau@mail.mcgill.ca
description = CivetQC is a command-line utility for automated quality control of CIVET outputs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshunrau/civetqc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    numpy>=1.21.3
    pandas>=1.3.4
    scikit_learn>=1.0.1
    setuptools>=58.3
include_package_data = True

[options.entry_points]
console_scripts =
    civetqc = civetqc.app.main:main

[options.package_data]
* = resources/datasets/*, resources/models/*
